--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -21,6 +21,14 @@ steps:
   inputs:
     restoreSolution: '$(solution)'
 
+- task: NuGetCommand@2
+  inputs:
+    command: 'restore'
+    restoreSolution: '**/*.sln'
+    feedsToUse: 'config'
+    nugetConfigPath: '\Src\MultiSafepay\packages.config'
+
+
 - task: VSBuild@1
   inputs:
     solution: '$(solution)'
