Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -26,7 +26,7 @@ steps:
     command: 'restore'
     restoreSolution: '**/*.sln'
     feedsToUse: 'config'
-    nugetConfigPath: '\Src\MultiSafepay\packages.config'
+    nugetConfigPath: '**/MultiSafepay/packages.config'
 
 
 - task: VSBuild@1
